log
Sat 01 Jul 2023 11:31:47 PM UTC: 
 tests:  0|6
total_score: 0/70
657c4b4
Sun 02 Jul 2023 12:24:28 AM UTC: 
 tests:  0|6
total_score: 0/70
1385d61
Sun 02 Jul 2023 12:27:46 AM UTC: 
 hashmap.c | 13 ++++++++++++-
 1 file changed, 12 insertions(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
ae4ed5f
Sun 02 Jul 2023 12:31:42 AM UTC: 
 hashmap.c | 5 -----
 1 file changed, 5 deletions(-)
 tests:  1|5
total_score: 10/70
e6753c7
Sun 02 Jul 2023 12:40:57 AM UTC: 
 hashmap.c | 22 +++++++++++++++++++++-
 1 file changed, 21 insertions(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘eraseMap’:
hashmap.c:87:1: error: expected identifier or ‘(’ before ‘}’ token
   87 | }
      | ^
test.c:453:5: error: ‘main’ is normally a non-static function [-Werror=main]
  453 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:511:1: error: expected declaration or statement at end of input
  511 | }
      | ^
In file included from test.c:4:
hashmap.c:84:8: error: unused variable ‘k’ [-Werror=unused-variable]
   84 |   long k = hash(key, map->capacity);
      |        ^
At top level:
test.c:453:5: error: ‘main’ defined but not used [-Werror=unused-function]
  453 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:217:5: error: ‘insert_test5’ defined but not used [-Werror=unused-function]
  217 | int insert_test5(){ //factor de carga>0.7, se llama a función enlarge
      |     ^~~~~~~~~~~~
test.c:131:6: error: ‘compare_test’ defined but not used [-Werror=unused-function]
  131 | void compare_test(){
      |      ^~~~~~~~~~~~
test.c:125:6: error: ‘hash_test3’ defined but not used [-Werror=unused-function]
  125 | void hash_test3(){ //no random
      |      ^~~~~~~~~~
test.c:111:6: error: ‘hash_test2’ defined but not used [-Werror=unused-function]
  111 | void hash_test2(){ // colisiones
      |      ^~~~~~~~~~
test.c:100:6: error: ‘hash_test1’ defined but not used [-Werror=unused-function]
  100 | void hash_test1(){ // posición válida
      |      ^~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
0bd7c37
Sun 02 Jul 2023 12:41:07 AM UTC: 
 hashmap.c | 2 --
 1 file changed, 2 deletions(-)
 tests:  5|4
total_score: 30/70
6d860fd
Sun 02 Jul 2023 12:45:55 AM UTC: 
 hashmap.c | 18 +++++++++++++++++-
 1 file changed, 17 insertions(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘searchMap’:
hashmap.c:93:27: error: ‘HashMap’ {aka ‘struct HashMap’} has no member named ‘buckest’; did you mean ‘buckets’?
   93 |     Pair * current = map->buckest[k];
      |                           ^~~~~~~
      |                           buckets
hashmap.c:96:29: error: passing argument 2 of ‘strcmp’ makes pointer from integer without a cast [-Werror=int-conversion]
   96 |     if(strcmp(current->key, k) == 0)
      |                             ^
      |                             |
      |                             long int
In file included from test.c:3:
/nix/store/iwd8ic5hhwdxn5dga0im55g5hjl270cd-glibc-2.33-47-dev/include/string.h:140:50: note: expected ‘const char *’ but argument is of type ‘long int’
  140 | extern int strcmp (const char *__s1, const char *__s2)
      |                                      ~~~~~~~~~~~~^~~~
In file included from test.c:4:
hashmap.c:103:8: error: suggest parentheses around assignment used as truth value [-Werror=parentheses]
  103 |     if(k = first) return NULL;
      |        ^
cc1: all warnings being treated as errors
Compilation failed
7725010
Sun 02 Jul 2023 12:46:04 AM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘searchMap’:
hashmap.c:96:29: error: passing argument 2 of ‘strcmp’ makes pointer from integer without a cast [-Werror=int-conversion]
   96 |     if(strcmp(current->key, k) == 0)
      |                             ^
      |                             |
      |                             long int
In file included from test.c:3:
/nix/store/iwd8ic5hhwdxn5dga0im55g5hjl270cd-glibc-2.33-47-dev/include/string.h:140:50: note: expected ‘const char *’ but argument is of type ‘long int’
  140 | extern int strcmp (const char *__s1, const char *__s2)
      |                                      ~~~~~~~~~~~~^~~~
In file included from test.c:4:
hashmap.c:103:8: error: suggest parentheses around assignment used as truth value [-Werror=parentheses]
  103 |     if(k = first) return NULL;
      |        ^
cc1: all warnings being treated as errors
Compilation failed
2a39777
